--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -1,1 +1,11 @@
-# 추후 업데이트 예정
+# PostgreSQL 연결 설정
+spring.datasource.url=yourdburl
+spring.datasource.username=yourusername
+spring.datasource.password=yourpassword
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA 설정
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
