--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	// QueryDSL (jakarta 버전)
+	implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+
 	// Mail
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
@@ -51,6 +57,26 @@ dependencies {
 
 	implementation 'commons-codec:commons-codec:1.15'
 
+}
+
+def querydslDir = "$buildDir/generated/querydsl"
+
+sourceSets {
+	main {
+		java {
+			srcDirs += querydslDir
+		}
+	}
+}
+
+// Q 클래스 생성 위치 지정
+tasks.withType(JavaCompile).configureEach {
+	options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
+}
+
+
+clean {
+	delete file(querydslDir)
 }
 
 tasks.named('test') {
